--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -5,11 +5,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:http": "node http-mcp-server.js",
+    "test": "node test.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.1.1",
+    "js-yaml": "^4.1.0"
   },
   "keywords": [
     "mcp",
